--- a/src/app/pages/tabs/pages/tabs-ready/tabs-ready.page.html
+++ b/src/app/pages/tabs/pages/tabs-ready/tabs-ready.page.html
@@ -34,7 +34,10 @@
           </div>
         </div>
 
-        <div class="circle-btn">NFC</div>
+        <div
+          class="circle-btn"
+          (click)="toNfc()"
+        >NFC</div>
       </div>
 
       <div
