--- a/src/app/@shared/header/header.component.html
+++ b/src/app/@shared/header/header.component.html
@@ -3,6 +3,7 @@
   <div
     class="avatar"
     (click)="openModal($event)"
+    *ngIf="!withThemeSwitch"
   >
     <svg-icon
       src="assets/Icons/header/avatar.svg"
@@ -13,6 +14,26 @@
     ></svg-icon>
     <div class="indicator">
       <div class="indicator__inner"></div>
+    </div>
+  </div>
+  <div class="switch-btn" *ngIf="withThemeSwitch" (click)="toggleSwitch()" [class.switch-on]="!(theme.isDarkTheme | async)">
+    <div class="moon">
+      <svg-icon
+        src="assets/Icons/header/moon.svg"
+        [svgStyle]="{
+          'width.vh': 2.2,
+          'height.vh': 2.2
+        }"
+      ></svg-icon>
+    </div>
+    <div class="sun">
+      <svg-icon
+        src="assets/Icons/header/sun.svg"
+        [svgStyle]="{
+          'width.vh': 2.2,
+          'height.vh': 2.2
+        }"
+      ></svg-icon>
     </div>
   </div>
 </div>
