--- a/src/app/pages/nfc-verify/nfc-verify.page.component.html
+++ b/src/app/pages/nfc-verify/nfc-verify.page.component.html
@@ -8,7 +8,7 @@
       }"
     ></svg-icon>
   </div>
-  <span class="task-number-span">{{currentTask.num | splitNumberSign}}</span>
+  <span class="task-number-span">{{currentTask?.num | splitNumberSign}}</span>
 </app-header>
 <div style="width: 100%; height: 100%; background-color: #1C1F2B;" class="content">
   <app-step-progress-bar [stepsCount]="3" [activeStepIndex]="1">
@@ -19,7 +19,7 @@
      <span class="gray-text">
     Установка:
     <span class="light-text">
-      {{currentTask.manufacture}}
+      {{currentTask?.manufacture}}
     </span>
   </span>
     </div>
@@ -27,13 +27,13 @@
      <span class="gray-text">
     Отсканируйте NFC метку для подтверждения выгрузки
     <span class="light-text">
-      пустой тары ({{currentTask.tare}} шт)
+      пустой тары ({{currentTask?.tare}} шт)
     </span>
        <span class="gray-text">
       и загрузки
     </span>
     <span class="light-text">
-      проб ({{currentTask.test}})
+      проб ({{currentTask?.test}})
     </span>
   </span>
     </div>
