--- a/src/app/pages/tabs/pages/tabs-main/tabs-main.page.scss
+++ b/src/app/pages/tabs/pages/tabs-main/tabs-main.page.scss
@@ -9,7 +9,7 @@
   font-weight: 500;
   font-size: sizeHeight(36);
 
-  color: #D7E2F2;
+  color: var(--text-contrast-color);
 }
 
 .container {
@@ -40,7 +40,7 @@
 
       svg-icon {
         position: absolute;
-        color: rgba(96, 101, 128, 0.5);
+        color: var(--chart-segment-color)
       }
 
       .chart-info {
@@ -54,17 +54,17 @@
           font-weight: 500;
           font-size: sizeHeight(30);
           text-align: center;
-          color: #D7E2F2;
+          color: var(--text-contrast-color);
         }
 
         .chart__unit {
-          color: #8C99B2;
+          color: var(--text-main-color);
         }
 
         .chart__total {
           font-weight: 500;
           font-size: sizeHeight(124);
-          color: #FFFFFF;
+          color: var(--text-accent-color);
         }
       }
     }
@@ -85,18 +85,20 @@
       align-items: center;
       gap: sizeHeight(10);
 
-      background: #272A38;
-      border-left: sizeWidth(8) solid #FFFFFF;
+      background: var(--bg-header-color);
+      border-left: sizeWidth(8) solid var(--index-fact-color);
       border-radius: sizeHeight(8);
+
+      filter: drop-shadow(0px 0px sizeHeight(20) var(--gradient-main-color-1));
 
       .title {
         font-size: sizeHeight(28);
-        color: #8C99B2;
+        color: var(--text-main-color);
       }
 
       .value {
         font-size: sizeHeight(64);
-        color: #FFFFFF;
+        color: var(--text-accent-color);
       }
     }
   }
