--- a/src/app/pages/tabs/pages/tabs-tasks/components/choose-task-overlay/choose-task-overlay.component.scss
+++ b/src/app/pages/tabs/pages/tabs-tasks/components/choose-task-overlay/choose-task-overlay.component.scss
@@ -21,11 +21,13 @@ button {
 
   position: relative;
 
+  background: var(--bg-body-color);
+
   .cancel {
     height: 2.2vh;
     width: 2.2vh;
 
-    color: #606580;
+    color: var(--border-icon-color);
 
     position: absolute;
     right: sizeHeight(30);
@@ -34,7 +36,7 @@ button {
 
   .title {
     font-size: sizeHeight(34);
-    color: #D7E2F2;
+    color: var(--text-contrast-color);
   }
 
   .content {
@@ -53,7 +55,7 @@ button {
       align-items: center;
 
       font-size: sizeHeight(29);
-      color: #D7E2F2;
+      color: var(--text-contrast-color);
 
       &__name {
         margin-left: sizeWidth(24);
@@ -75,10 +77,10 @@ button {
     align-items: center;
     justify-content: center;
 
-    background: #0089FF;
+    background: var(--border-blue-color);
     border-radius: sizeHeight(8);
 
     font-size: sizeHeight(40);
-    color: #D7E2F2;
+    color: var(--text-alwaysWhite-color);
   }
 }
