--- a/src/app/pages/tabs/pages/tabs-tasks/components/tabs-tasks-card/tabs-tasks-card.component.scss
+++ b/src/app/pages/tabs/pages/tabs-tasks/components/tabs-tasks-card/tabs-tasks-card.component.scss
@@ -17,9 +17,11 @@ span {
   display: flex;
   align-items: center;
 
-  background: #272A38;
+  background: var(--bg-header-color);
   border: 1px solid transparent;
   border-radius: sizeHeight(8);
+
+  filter: drop-shadow(0px 0px sizeHeight(20) var(--gradient-main-color-1));
 
   .chart {
     height: sizeHeight(160);
@@ -42,16 +44,16 @@ span {
 
       .total {
         font-size: sizeHeight(30);
-        color: #8C99B2;
+        color: var(--text-main-color);
       }
       .spent {
         font-size: sizeHeight(34);
-        color: #FFFFFF;
+        color: var(--index-fact-color);
       }
     }
 
     ::ng-deep {
-      fill: #FFFFFF;
+      fill: var(--index-fact-color);
     }
   }
 
@@ -66,12 +68,12 @@ span {
     .title {
       margin-bottom: sizeHeight(10);
       font-size: sizeHeight(34);
-      color: #8C99B2;
+      color: var(--text-main-color);
 
       .manufacture {
         margin-left: sizeWidth(10);
         font-size: sizeHeight(34);
-        color: #8C99B2;
+        color: var(--text-main-color);
       }
     }
 
@@ -87,37 +89,38 @@ span {
         align-items: center;
         justify-content: center;
 
-        background: #4B5169;
+        background: var(--gray-G8-color);
         border-radius: sizeHeight(8);
 
-        color: #FFFFFF;
+        color: var(--index-fact-color);
 
         &_active {
-          background: #0089FF;
+          background: var(--border-blue-color);
+          color: var(--text-alwaysWhite-color)
         }
       }
 
       .info {
         margin-left: sizeWidth(25);
         font-size: sizeHeight(30);
-        color: #606580;
+        color: var(--text-subscript-color);
       }
     }
     overflow: hidden;
   }
 
   &_active {
-    border-color: #0089FF;
+    border-color: var(--border-blue-color);
 
     .description {
       .title {
-        color: #FFFFFF;
+        color: var(--text-accent-color);
       }
     }
 
     .chart {
       ::ng-deep {
-        fill: #00A73D;
+        fill: var(--index-green1-color);
       }
     }
   }
