--- a/src/app/pages/tabs/pages/tabs-tasks/tabs-tasks.page.scss
+++ b/src/app/pages/tabs/pages/tabs-tasks/tabs-tasks.page.scss
@@ -18,13 +18,13 @@
     font-size: sizeHeight(24);
     letter-spacing: sizeWidth(1.5);
     text-transform: uppercase;
-    color: #8C99B2;
+    color: var(--text-main-color);
 
     border-bottom: sizeHeight(6) solid transparent;
 
     &_active {
-      border-color: #0089FF;
-      color: #0089FF;
+      border-color: var(--border-blue-color);
+      color: var(--border-blue-color);
     }
   }
 
@@ -56,11 +56,11 @@
         align-items: center;
         justify-content: center;
 
-        background: #0089FF;
+        background: var(--border-blue-color);
         border-radius: 50%;
 
         font-size: sizeHeight(40);
-        color: #FFFFFF;
+        color: var(--text-alwaysWhite-color);
 
         position: fixed;
         right: sizeHeight(30);
