--- a/src/app/pages/tabs/tabs.page.scss
+++ b/src/app/pages/tabs/tabs.page.scss
@@ -7,7 +7,7 @@
   display: flex;
   flex-flow: column;
   height: 100%;
-  background: #1C1F2B;
+  background: var(--bg-body-color);
 
   .page-wrapper {
     position: relative;
@@ -18,13 +18,13 @@
       height: sizeHeight(20);
       width: 100%;
 
-      background: linear-gradient(0deg, rgba(0, 0, 0, 0.25) -0.04%, rgba(25, 28, 44, 0) 99.96%);
+      background: linear-gradient(0deg, var(--gradient-main-color-1) -0.04%, var(--gradient-main-color-2) 99.96%);
       position: absolute;
       bottom: 0;
 
       &:first-child {
         top: 10vh;
-        background: linear-gradient(180deg, rgba(0, 0, 0, 0.25) -0.04%, rgba(25, 28, 44, 0) 99.96%);
+        background: linear-gradient(180deg, var(--gradient-main-color-1) -0.04%, var(--gradient-main-color-2) 99.96%);
       }
     }
   }
@@ -34,7 +34,7 @@
     height: 7vh;
 
     display: flex;
-    background: #272A38;
+    background: var(--bg-header-color);
 
     .tab-icon {
       flex: 1;
@@ -44,11 +44,13 @@
       align-items: center;
       justify-content: center;
 
-      color: #606580;
+      color: var(--text-subscript-color);
       font-size: sizeHeight(24);
+      border-bottom: sizeHeight(6) solid transparent;
 
       &_active {
-        color: #0089FF;
+        color: var(--border-blue-color);
+        border-color: var(--border-blue-color);
       }
     }
   }
