--- a/src/app/pages/map/map.page.html
+++ b/src/app/pages/map/map.page.html
@@ -1,21 +1,20 @@
 <div #screen class="container">
-<!--  <app-header class = header>-->
-<!--    <div class="arrow" (click)="redirectToTab()">-->
-<!--      <svg-icon-->
-<!--        src="/assets/Icons/tabs/arrowLeft.svg"-->
-<!--        [svgStyle]="{-->
-<!--          'height.vh': 3.9,-->
-<!--          'width.vh': 3.9-->
-<!--        }"-->
-<!--      ></svg-icon>-->
-<!--    </div>-->
-<!--    <div class="title">{{(tabsService.inProgressItems$|async)[0].num}}</div>-->
-<!--  </app-header>-->
+  <app-header class="header">
+    <div class="arrow" (click)="redirectToTab()">
+      <svg-icon
+        src="/assets/Icons/tabs/arrowLeft.svg"
+        [svgStyle]="{
+          'height.vh': 3.9,
+          'width.vh': 3.9
+        }"
+      ></svg-icon>
+    </div>
+    <div class="title">{{(tabsService.inProgressItems$|async)[0].num}}</div>
+  </app-header>
   <div #map [style]="transformStyle" class="box">
     <div [style]="rotationStyle" class="entry-box">
       <div [style]="scaleStyle" class="entry-box">
-        <div #point [style]="pointStyle" class="point"></div>
-        <img src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Fwww.sunhome.ru%2Fi%2Fwallpapers%2F50%2Fkartinki-detskie-skachat-besplatno.orig.jpg&f=1&nofb=1">
+        <img style="transform: scale(10)" src="assets/Icons/map/map.svg"/>
       </div>
     </div>
   </div>
@@ -25,7 +24,7 @@
   <div class="progress">
     <app-map-progress
       [percent]="60"
-      [name]="(tabsService.inProgressItems$|async)[0].manufacture"
+      [name]="((tabsService?.inProgressItems$ | async) || [null])[0]?.manufacture"
     ></app-map-progress>
   </div>
 
