--- a/src/app/pages/map/map.page.scss
+++ b/src/app/pages/map/map.page.scss
@@ -17,7 +17,7 @@
   align-items: center;
   width: 100%;
   height: 100%;
-  background: darkgray;
+  background: #191c2a;
 
   position: relative;
 
@@ -27,6 +27,7 @@
     position: absolute;
     top: 0;
     left: 0;
+    z-index: 999;
 
     .title {
       margin-left: sizeWidth(20);
@@ -91,8 +92,8 @@
   .box {
     display: flex;
     margin: auto;
-    width: 100%;
-    height: 100%;
+    width: 100vw;
+    height: 100vh;
     color: black;
 
     .entry-box {
@@ -107,6 +108,8 @@
       width: 100%;
       height: 100%;
       margin: auto;
+      will-change: transform;
+      -webkit-backface-visibility: hidden;
     }
   }
 }
