Fixed logic issues

--- a/src/app/pages/nfc-verify/components/nfc-timer-modal/nfc-timer-modal.component.html
+++ b/src/app/pages/nfc-verify/components/nfc-timer-modal/nfc-timer-modal.component.html
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="container" (click)="close()">
   <div *ngIf="!nfcLabelAccepted" class="timer-container">
     <svg fill="none" height="50.5vw" width="50.5vw" xmlns="http://www.w3.org/2000/svg">
       <circle class="timer-background-circle" cx="50%" cy="50%" r="47%" stroke-width="1.5%"/>
