--- a/src/app/pages/nfc-verify/components/verify-modal/verify-modal.component.html
+++ b/src/app/pages/nfc-verify/components/verify-modal/verify-modal.component.html
@@ -35,7 +35,7 @@
       </div>
     </div>
   </div>
-  <button (click)="close()" class="accept-button">Подтверждаю</button>
+  <button (click)="presentNfcTimerModal()" class="accept-button">Подтверждаю</button>
   <div (click)="close()" class="close-button">
     <svg-icon [svgStyle]="{
          'width': '2.2vh',
