--- a/src/global.scss
+++ b/src/global.scss
@@ -53,7 +53,11 @@ html, body, .ion-app, .ion-content {
   .modal-wrapper {
 
     width: 100%;
-    height: 100%;
+    height: 55%;
+    margin-right: sizeHeight(83);
+    margin-left: sizeHeight(83);
+    margin-bottom: sizeHeight(260);
+    margin-top: sizeHeight(146);
     background: #1C1F2BCC;
     overflow: hidden;
   }
