--- a/src/app/pages/nfc-verify/components/nfc-timer-modal/nfc-timer-modal.component.html
+++ b/src/app/pages/nfc-verify/components/nfc-timer-modal/nfc-timer-modal.component.html
@@ -1,10 +1,10 @@
 <div class="container" (click)="close()">
-  <div *ngIf="!nfcLabelAccepted" class="timer-container">
+  <div *ngIf="!isNfcAccepted" class="timer-container">
     <svg fill="none" height="50.5vw" width="50.5vw" xmlns="http://www.w3.org/2000/svg">
       <circle class="timer-background-circle" cx="50%" cy="50%" r="47%" stroke-width="1.5%"/>
     </svg>
   </div>
-  <div *ngIf="nfcLabelAccepted" class="timer-container">
+  <div *ngIf="isNfcAccepted" class="timer-container">
     <svg fill="none" height="50.5vw" viewBox="0 0 488 488" width="50.5vw" xmlns="http://www.w3.org/2000/svg">
       <circle class="timer-success-circle" cx="50%" cy="50%" fill="currentColor" r="47%" stroke="currentColor"
               stroke-width="1.5%"/>
@@ -16,19 +16,18 @@
         stroke="#00A73D" stroke-linecap="round" stroke-linejoin="round" stroke-miterlimit="10" stroke-width="6.05442"/>
     </svg>
   </div>
-  <div *ngIf="!nfcLabelAccepted" class="timer-info-block">
-    <div class="help-text">Поднесите телефон к NFC метке</div>
-    <div class="timer-value-text" id="timerValue">{{currentTimerValue}}</div>
-  </div>
-  <div *ngIf="!nfcLabelAccepted" class="timer">
-    <svg height="100%" width="100%">
-      <circle class="timer__circle" cx="50%" cy="50%" fill="none" r="47%" stroke="#00A73D" stroke-linecap="round"
-              stroke-width="1.5%"></circle>
-    </svg>
-  </div>
-  <div *ngIf="!nfcLabelAccepted" class="timer-run-ripple">
-  </div>
-  <div *ngIf="nfcLabelAccepted" class="timer-success-ripple">
-  </div>
+  <ng-container *ngIf="!isNfcAccepted">
+    <div class="timer-info-block">
+      <div class="help-text">Поднесите телефон к NFC метке</div>
+      <div class="timer-value-text" id="timerValue">{{currentTimerValue}}</div>
+    </div>
+    <div class="timer">
+      <svg height="100%" width="100%">
+        <circle class="timer__circle" cx="50%" cy="50%" fill="none" r="47%" stroke="#00A73D" stroke-linecap="round"
+                stroke-width="1.5%"></circle>
+      </svg>
+    </div>
+  </ng-container>
+  <div class="timer-ripple" [class.timer-ripple__success]="!isNfcAccepted"></div>
 </div>
 
