--- a/src/app/pages/nfc-verify/components/nfc-timer-modal/nfc-timer-modal.component.html
+++ b/src/app/pages/nfc-verify/components/nfc-timer-modal/nfc-timer-modal.component.html
@@ -28,6 +28,6 @@
       </svg>
     </div>
   </ng-container>
-  <div class="timer-ripple" [class.timer-ripple__success]="!isNfcAccepted"></div>
+  <div class="timer-ripple" [class.timer-ripple__success]="isNfcAccepted"></div>
 </div>
 
