--- a/src/app/pages/map/map.page.scss
+++ b/src/app/pages/map/map.page.scss
@@ -17,7 +17,7 @@
   align-items: center;
   width: 100%;
   height: 100%;
-  background: #191c2a;
+  background: #12151E;
 
   position: relative;
 
